# meta-dstack

./: README.md  get-modular.sh  get-modular.sh~
conf/: layer.conf
get-quote/: Cargo.toml  Dockerfile  pod.yml
get-quote/src/: main.rs
measurements/: Cargo.toml
measurements/src/: main.rs
patches/: cvm.conf.patch  local.conf.patch
prod-patches/: local.conf.patch
recipes-core/dstack-sync/: dstack-sync.bb  init  mini-server
server/: Cargo.toml
server/src/: debug.rs  main.rs  podman.rs  tdx.rs
server/src/tdx/: quote.rs
